--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,70 +1,21 @@
-<div class="flex font-sans">
-  <div class="flex-none w-56 relative">
-    <img src="/kids-jumpsuit.jpg" alt="" class="absolute inset-0 w-full h-full object-cover rounded-lg" />
+<section class="text-gray-600 body-font relative">
+  <div class="absolute inset-0 bg-gray-300">
+    <iframe width="100%" height="100%" frameborder="0" marginheight="0" marginwidth="0" title="map" scrolling="no" src="https://maps.google.com/maps?width=100%&amp;height=600&amp;hl=en&amp;q=%C4%B0zmir+(My%20Business%20Name)&amp;ie=UTF8&amp;t=&amp;z=14&amp;iwloc=B&amp;output=embed" style="filter: grayscale(1) contrast(1.2) opacity(0.4);"></iframe>
   </div>
-  <form class="flex-auto p-6">
-    <div class="flex flex-wrap">
-      <h1 class="flex-auto font-medium text-slate-900">
-        Kids Jumpsuit
-      </h1>
-      <div class="w-full flex-none mt-2 order-1 text-3xl font-bold text-violet-600">
-        $39.00
+  <div class="container px-5 py-24 mx-auto flex">
+    <div class="lg:w-1/3 md:w-1/2 bg-white rounded-lg p-8 flex flex-col md:ml-auto w-full mt-10 md:mt-0 relative z-10 shadow-md">
+      <h2 class="text-gray-900 text-lg mb-1 font-medium title-font">Feedback</h2>
+      <p class="leading-relaxed mb-5 text-gray-600">Post-ironic portland shabby chic echo park, banjo fashion axe</p>
+      <div class="relative mb-4">
+        <label for="email" class="leading-7 text-sm text-gray-600">Email</label>
+        <input type="email" id="email" name="email" class="w-full bg-white rounded border border-gray-300 focus:border-indigo-500 focus:ring-2 focus:ring-indigo-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out">
       </div>
-      <div class="text-sm font-medium text-slate-400">
-        In stock
+      <div class="relative mb-4">
+        <label for="message" class="leading-7 text-sm text-gray-600">Message</label>
+        <textarea id="message" name="message" class="w-full bg-white rounded border border-gray-300 focus:border-indigo-500 focus:ring-2 focus:ring-indigo-200 h-32 text-base outline-none text-gray-700 py-1 px-3 resize-none leading-6 transition-colors duration-200 ease-in-out"></textarea>
       </div>
+      <button class="text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded text-lg">Button</button>
+      <p class="text-xs text-gray-500 mt-3">Chicharrones blog helvetica normcore iceland tousled brook viral artisan.</p>
     </div>
-    <div class="flex items-baseline mt-4 mb-6 pb-6 border-b border-slate-200">
-      <div class="space-x-2 flex text-sm font-bold">
-        <label>
-          <input class="sr-only peer" name="size" type="radio" value="xs" checked />
-          <div class="w-9 h-9 rounded-full flex items-center justify-center text-violet-400 peer-checked:bg-violet-600 peer-checked:text-white">
-            XS
-          </div>
-        </label>
-        <label>
-          <input class="sr-only peer" name="size" type="radio" value="s" />
-          <div class="w-9 h-9 rounded-full flex items-center justify-center text-violet-400 peer-checked:bg-violet-600 peer-checked:text-white">
-            S
-          </div>
-        </label>
-        <label>
-          <input class="sr-only peer" name="size" type="radio" value="m" />
-          <div class="w-9 h-9 rounded-full flex items-center justify-center text-violet-400 peer-checked:bg-violet-600 peer-checked:text-white">
-            M
-          </div>
-        </label>
-        <label>
-          <input class="sr-only peer" name="size" type="radio" value="l" />
-          <div class="w-9 h-9 rounded-full flex items-center justify-center text-violet-400 peer-checked:bg-violet-600 peer-checked:text-white">
-            L
-          </div>
-        </label>
-        <label>
-          <input class="sr-only peer" name="size" type="radio" value="xl" />
-          <div class="w-9 h-9 rounded-full flex items-center justify-center text-violet-400 peer-checked:bg-violet-600 peer-checked:text-white">
-            XL
-          </div>
-        </label>
-      </div>
-    </div>
-    <div class="flex space-x-4 mb-5 text-sm font-medium">
-      <div class="flex-auto flex space-x-4">
-        <button class="h-10 px-6 font-semibold rounded-full bg-violet-600 text-white" type="submit">
-          Buy now
-        </button>
-        <button class="h-10 px-6 font-semibold rounded-full border border-slate-200 text-slate-900" type="button">
-          Add to bag
-        </button>
-      </div>
-      <button class="flex-none flex items-center justify-center w-9 h-9 rounded-full text-violet-600 bg-violet-50" type="button" aria-label="Like">
-        <svg width="20" height="20" fill="currentColor" aria-hidden="true">
-          <path fill-rule="evenodd" clip-rule="evenodd" d="M3.172 5.172a4 4 0 015.656 0L10 6.343l1.172-1.171a4 4 0 115.656 5.656L10 17.657l-6.828-6.829a4 4 0 010-5.656z" />
-        </svg>
-      </button>
-    </div>
-    <p class="text-sm text-slate-500">
-      Free shipping on all continental US orders.
-    </p>
-  </form>
-</div>
+  </div>
+</section>
